[package]
name = "export-db"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
kaspa-utils.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus.workspace = true
kaspa-database.workspace = true
kaspa-addresses.workspace = true
kaspa-txscript.workspace = true
serde.workspace = true

indicatif = { version = "*" }
csv = "1.3.0"
serde_json = "1.0.116"
